# app/Http/Controllers/ApiGetDataController.php
@@ -220,6 +220,7 @@ class ApiGetDataController extends Controller
         $cpData = DB::table('OPR_HREC_TBL')
             ->join('TEC_CP_HREC_TBL', 'OPR_HREC_TBL.OPR_HREC_ID', '=', 'TEC_CP_HREC_TBL.OPR_HREC_ID')
             ->where('OPR_HREC_TBL.OPR_HREC_PROCS', '=', 'CP')
+            ->where('OPR_HREC_TBL.OPR_HREC_SENDAPP_STD', '=', null)
             ->select('OPR_HREC_TBL.*', 'TEC_CP_HREC_TBL.*')
             ->get();
 
@@ -227,6 +228,7 @@ class ApiGetDataController extends Controller
         $rfData = DB::table('OPR_HREC_TBL')
             ->join('TEC_RF_HREC_TBL', 'OPR_HREC_TBL.OPR_HREC_ID', '=', 'TEC_RF_HREC_TBL.OPR_HREC_ID')
             ->where('OPR_HREC_TBL.OPR_HREC_PROCS', '=', 'RF')
+            ->where('OPR_HREC_TBL.OPR_HREC_SENDAPP_STD', '=', null)
             ->select('OPR_HREC_TBL.*', 'TEC_RF_HREC_TBL.*')
             ->get();
 
@@ -235,5 +237,28 @@ class ApiGetDataController extends Controller
             'cp' => $cpData,
             'rf' => $rfData
         ]);
+    }
+
+    /**
+     * @OA\Get(
+     *     path="/get/users",
+     *     summary="Get users on web",
+     *     tags={"Get Users"},
+     *     @OA\Response(
+     *         response=200,
+     *         description="Successful operation"
+     *     ),
+     *     @OA\Response(
+     *         response=400,
+     *         description="Invalid request"
+     *     )
+     * )
+     */
+
+    public function GetUsersWeb()
+    {
+        $users = DB::table('VUSER_DEPT')->get();
+
+        return response()->json($users);
     }
 }
